// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle className 1`] = `
<button
  className="toggle  c"
  onClick={[Function]}
  value={0}
>
  <span
    className="toggle__bar  "
  />
  <span
    className="toggle__knob  "
  />
</button>
`;

exports[`Toggle disabled 1`] = `
<button
  className="toggle toggle__disabled "
  onClick={[Function]}
  value={0}
>
  <span
    className="toggle__bar  toggle__bar--disabled"
  />
  <span
    className="toggle__knob  toggle__knob--disabled"
  />
</button>
`;

exports[`Toggle disabled 2`] = `
<button
  className="toggle toggle__disabled "
  onClick={[Function]}
  value={0}
>
  <span
    className="toggle__bar  toggle__bar--disabled"
  />
  <span
    className="toggle__knob  toggle__knob--disabled"
  />
</button>
`;

exports[`Toggle value is false 1`] = `
<button
  className="toggle  "
  onClick={[Function]}
  value={0}
>
  <span
    className="toggle__bar  "
  />
  <span
    className="toggle__knob  "
  />
</button>
`;

exports[`Toggle value is true 1`] = `
<button
  className="toggle  "
  onClick={[Function]}
  value={1}
>
  <span
    className="toggle__bar toggle__bar--active "
  />
  <span
    className="toggle__knob toggle__knob--active "
  />
</button>
`;
